<resources>
    <string name="app_name">室内定位平台</string>

    <string name="menu_login_setip">设置服务器IP</string>
    <string name="activity_login_logoDescription">logo</string>
    <string name="activity_login_usernameHint">请输入用户名:</string>
    <string name="activity_login_passwordHint">请输入密码:</string>
    <string name="activity_login_rememberPassword">记住密码</string>
    <string name="activity_login_autoLogin">自动登录</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_register">注册</string>
    <string name="activity_login_logining">努力登录中…</string>
    <string name="activity_login_invalidUsername">用户名不存在,请重新输入!</string>
    <string name="activity_login_invalidPassword">密码错误,请重新输入!</string>

    <string name="activity_common_invalidInput">用户名或密码为空,请重新输入!</string>
    <string name="activity_common_oversizeInput">用户名和密码不得超过20个字符!</string>
    <string name="activity_common_unexpectedError">网络错误,请检查网络后重试!</string>
    <string name="activity_common_unauthorized">您的账户已过期!请重新登录!</string>

    <string name="activity_main_defaultScene">请选择</string>

    <string name="activity_register_usernameHint">用户名:</string>
    <string name="activity_register_passwordHint">密码:</string>
    <string name="activity_register_confirm">确认信息并注册</string>
    <string name="activity_register_registering">努力注册中…</string>
    <string name="activity_register_succeed">注册成功!请登录!</string>
    <string name="activity_register_duplicateUsername">您的用户名已被注册!</string>

    <string name="fragment_positioning_downloadingMap">正在加载地图…</string>
    <string name="fragment_positioning_downloadMapSucceed">下载地图成功!</string>
    <string name="fragment_positioning_positioningStarted">定位已开始!</string>
    <string name="fragment_positioning_positioningRunning">请先停止定位再切换场景!</string>
    <string name="fragment_positioning_positioningStoped">定位已停止!</string>
    <string name="fragment_positioning_plzChooseScene">请先选择场景!</string>

    <string name="fragment_updateFP_coord">坐标</string>
    <string name="fragment_updateFP_coordXHint">请输入X坐标:</string>
    <string name="fragment_updateFP_coordYHint">请输入Y坐标:</string>
    <string name="fragment_updateFP_sceneName">场景名</string>
    <string name="fragment_updateFP_gettingList">正在获取中…</string>
    <string name="fragment_updateFP_wifi">更新WiFi指纹</string>
    <string name="fragment_updateFP_geomagnetic">更新地磁指纹</string>
    <string name="fragment_updateFP_invalidCoord">输入格式错误,请检查!</string>
    <string name="fragment_updateFP_updateSucceed">更新指纹成功!</string>
    <string name="fragment_updateFP_collectingWifi">正在采集WiFi指纹,请稍候…</string>
    <string name="fragment_updateFP_collectingGeo">正在采集地磁指纹,请稍候…</string>
    <string name="fragment_updateFP_updating">采集完毕,上传到服务器中…</string>

    <string name="fragment_updateMap_title">上传地图</string>
    <string name="fragment_updateMap_sceneNameHint">请输入场景名称:</string>
    <string name="fragment_updateMap_scaleHint">请输入比例尺:</string>
    <string name="fragment_updateMap_pathHint">请输入文件路径:</string>
    <string
        name="fragment_updateMap_help">提示:要上传新地图请自行输入场景名称,
        比例尺的含义为一个单位长度代表的像素数,可以是小数.
        比如:要上传的地图分辨率为1000*500,对应场景的长宽分别为10个单位长度和5个单位长度,
        那么比例尺应填入100.</string>
    <string name="fragment_updateMap_chooseFile">选择文件</string>
    <string name="fragment_updateMap_chooseSceneName">选择场景</string>
    <string name="fragment_updateMap_confirm">上传地图</string>
    <string name="fragment_updateMap_updateSucceed">更新地图成功!</string>
    <string name="fragment_updateMap_chooseFileFailed">选择地图文件失败!</string>
    <string name="fragment_updateMap_confirmFailed">信息不完善或有误,请检查!</string>
    <string name="fragment_updateMap_streamFailed">文件读取错误,请检查!</string>
    <string name="fragment_updateMap_updating">正在将地图上传至服务器…</string>

    <string name="fragment_settings_common">通用</string>
    <string name="fragment_settings_autoLogin">自动登录</string>
    <string name="fragment_settings_autoUpdateMap">自动更新地图</string>
    <string name="fragment_settings_deleteMapCache">删除地图缓存</string>
    <string name="fragment_settings_deleteFailed">删除失败,请重试</string>
    <string name="fragment_settings_deleteSuceeed">删除成功!</string>
    <string name="fragment_settings_location">定位</string>
    <string name="fragment_settings_locationMethod">定位方法</string>
    <string name="fragment_settings_locationInterval">定位间隔</string>
    <string name="fragment_settings_numberOfWifiAP">使用AP个数</string>
    <string name="fragment_settings_numberOfAcquisition">指纹采集次数</string>
    <string name="fragment_settings_wifiOnly">只使用WiFi</string>
    <string name="fragment_settings_geomagneticOnly">只使用地磁</string>
    <string name="fragment_settings_useBothMethod">WiFi和地磁</string>
    <string name="fragment_settings_confirm">确定</string>
    <string name="fragment_settings_cancel">取消</string>
    <string name="fragment_settings_logout">退出当前账户</string>
    <string name="fragment_settings_logoutTitle">注销</string>
    <string name="fragment_settings_logoutMSG">确定要退出当前账户吗?</string>

    <string name="activity_main_positioning">定位</string>
    <string name="activity_main_fingerprint">指纹</string>
    <string name="activity_main_map">地图</string>
    <string name="activity_main_settings">设置</string>
    <string name="activity_main_wifiDisabled">WiFi未打开,请开启WiFi!</string>

    <string name="broadcast_forceOffline_warning">警告</string>
    <string name="broadcast_forceOffline_msg">您的帐号已过期,请重新登录!</string>
    <string name="broadcast_forceOffline_confirm">确定</string>
</resources>
