<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:contentDescription="@string/activity_login_logoDescription"
        android:src="@drawable/login_icon_logo"/>

    <EditText
        android:id="@+id/edtTxt_login_username"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/bg_white"
        android:inputType="text"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/login_edttxt_username_style"
        android:singleLine="true"
        android:hint="@string/activity_login_usernameHint"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/common_grey"/>

    <EditText
        android:id="@+id/edtTxt_login_password"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/bg_white"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/login_edttxt_password_style"
        android:singleLine="true"
        android:hint="@string/activity_login_passwordHint"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login_login"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"
            android:background="@drawable/common_btn_style"
            android:text="@string/activity_login_login"/>

        <Button
            android:id="@+id/btn_login_register"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"
            android:background="@drawable/common_btn_style"
            android:text="@string/activity_login_register"/>

    </LinearLayout>
</LinearLayout>