<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_grey">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_updateFP_coord"
        android:textColor="@color/common_grey"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_white">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/common_grey"/>

        <EditText
            android:id="@+id/edtTxt_updateFP_coorX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:background="@color/bg_white"
            android:hint="@string/fragment_updateFP_coordXHint"
            android:padding="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/common_grey"/>

        <EditText
            android:id="@+id/edtTxt_updateFP_coorY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:background="@color/bg_white"
            android:hint="@string/fragment_updateFP_coordYHint"
            android:padding="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/common_grey"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="16dp"
        android:background="@color/common_grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/bg_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fragment_updateFP_sceneName"/>

        <TextView
            android:id="@+id/tv_updateFP_sceneName"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="@color/common_grey"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/common_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_updateFP_wifi"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"
            android:background="@drawable/common_btn_style"
            android:text="@string/fragment_updateFP_wifi"/>

        <Button
            android:id="@+id/btn_updateFP_geomagnetic"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"
            android:background="@drawable/common_btn_style"
            android:text="@string/fragment_updateFP_geomagnetic"/>

    </LinearLayout>
</LinearLayout>