<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_grey">

    <EditText
        android:id="@+id/edtTxt_register_username"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:inputType="text"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/login_edttxt_username_style"
        android:singleLine="true"
        android:hint="@string/activity_register_usernameHint"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/common_grey"/>

    <EditText
        android:id="@+id/edtTxt_register_password"
        android:background="@color/bg_white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/login_edttxt_password_style"
        android:singleLine="true"
        android:hint="@string/activity_register_passwordHint"/>

    <Button
        android:id="@+id/btn_register_confirm"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_btn_style"
        android:text="@string/activity_register_confirm"
        android:textColor="@color/black"/>

</LinearLayout>