<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_grey"
            android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_settings_common"
            android:textColor="@color/common_grey"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_white">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/common_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fragment_settings_autoLogin"/>

                <ToggleButton
                    android:id="@+id/tglBtn_settings_autoLogin"
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/common_togglebtn_style"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/common_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fragment_settings_autoUpdateMap"/>

                <ToggleButton
                    android:id="@+id/tglBtn_settings_autoUpdateMap"
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/common_togglebtn_style"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/common_grey"/>

            <TextView
                android:id="@+id/tv_settings_deleteMapCache"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_tv_style"
                android:padding="16dp"
                android:textSize="20sp"
                android:text="@string/fragment_settings_deleteMapCache"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/common_grey"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_settings_location"
            android:textColor="@color/common_grey"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_white">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/common_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fragment_settings_locationMethod"/>

                <TextView
                    android:id="@+id/tv_settings_locationMethod"
                    android:clickable="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:gravity="end"
                    android:textSize="15sp"
                    android:textColor="@color/common_grey"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/common_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fragment_settings_locationInterval"/>

                <TextView
                    android:id="@+id/tv_settings_locationInterval"
                    android:clickable="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:gravity="end"
                    android:textSize="15sp"
                    android:textColor="@color/common_grey"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/common_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fragment_settings_numberOfWifiAP"/>

                <TextView
                    android:id="@+id/tv_settings_numberOfWifiAP"
                    android:clickable="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:gravity="end"
                    android:textSize="15sp"
                    android:textColor="@color/common_grey"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/common_grey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/fragment_settings_numberOfAcquisition"/>

                <TextView
                    android:id="@+id/tv_settings_numberOfAcquisition"
                    android:clickable="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:gravity="end"
                    android:textSize="15sp"
                    android:textColor="@color/common_grey"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/common_grey"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_settings_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/fragment_settings_logout"
            android:background="@drawable/common_btn_style"/>

    </LinearLayout>

</ScrollView>